# crudder

./: .gitignore  Cargo.toml  flake.nix  readme.md  spec.md
crates/crudder-ast/: Cargo.toml
crates/crudder-ast/src/: lib.rs
crates/crudder-build/: Cargo.toml
crates/crudder-build/src/: lib.rs
crates/crudder-cli/: Cargo.toml
crates/crudder-cli/src/: main.rs
crates/crudder-codegen/: Cargo.toml
crates/crudder-codegen/src/: lib.rs  pass.rs  protobuf.rs  rust.rs  sqlx.rs  typescript.rs
crates/crudder-codegen/src/rust/: base.rs  mod.rs
crates/crudder-codegen/src/rust/passes/: axum.rs  mod.rs  serde.rs  sqlx.rs
crates/crudder-codegen/src/typescript/: base.rs  mod.rs
crates/crudder-codegen/src/typescript/passes/: client.rs  express.rs  mod.rs  zod.rs
crates/crudder-lexer/: Cargo.toml
crates/crudder-lexer/src/: lib.rs
crates/crudder-lua/: Cargo.toml
crates/crudder-lua/src/: bindings.rs  context.rs  error.rs  helpers.rs  lib.rs  loader.rs
crates/crudder-parser/: Cargo.toml
crates/crudder-parser/src/: lib.rs
demo/backend/: Cargo.toml  build.rs
demo/backend/src/: lib.rs  main.rs
demo/frontend/: index.html  package-lock.json  package.json
demo/frontend/src/: app.ts  client.ts  handlers.ts  schemas.ts  types.ts
examples/: todo.crudder  user.crudder
examples/build-example/: Cargo.toml  build.rs
examples/build-example/src/: main.rs
recipes/: example-simple.lua  rust-axum.lua  rust-build.lua  rust-trait.lua  typescript-react.lua  typescript-trait.lua
