[workspace]
resolver = "2"
members = [
    "crates/crudder-ast",
    "crates/crudder-lexer",
    "crates/crudder-parser",
    "crates/crudder-lua",
    "crates/crudder-build",
    "crates/crudder-cli",
]
exclude = ["demo", "examples/build-example"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Crudder Contributors"]

[workspace.dependencies]
# Internal crates
crudder-ast = { path = "crates/crudder-ast" }
crudder-lexer = { path = "crates/crudder-lexer" }
crudder-parser = { path = "crates/crudder-parser" }
crudder-lua = { path = "crates/crudder-lua" }
crudder-build = { path = "crates/crudder-build" }

# External dependencies
logos = "0.14"
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
thiserror = "1"
dirs = "5"
