[package]
name = "crudder-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code generation backends for the Crudder DSL"

[dependencies]
crudder-ast.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
prettyplease.workspace = true
thiserror.workspace = true
