[package]
name = "todo-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todo-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

[build-dependencies]
crudder-parser = { path = "../../crates/crudder-parser" }
crudder-codegen = { path = "../../crates/crudder-codegen" }
